--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,6 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version> <!-- Use the same version as javax.mail-api -->
 		</dependency>
-		<!--
-		https://mvnrepository.com/artifact/com.google.auth/google-auth-library-oauth2-http -->
-		<dependency>
-			<groupId>com.google.auth</groupId>
-			<artifactId>google-auth-library-oauth2-http</artifactId>
-			<version>0.3.1</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -90,6 +83,13 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
+		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+			<version>6.3.0</version>
 		</dependency>
 		<!-- Database and ORM -->
 		<dependency>
